--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = [
     {name = "Mike", email = "sortia@protonmail.com"}
 ]
 license = {text = "MIT"}
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "pydantic>=2.5.0",
     "jinja2>=3.1.0",
     "typer>=0.9.0",
     "rich>=13.0.0",
+    "textual>=0.50.0",
 ]
 
 [project.scripts]
@@ -24,6 +25,9 @@ dev = [
     "hypothesis>=6.0.0",
     "mypy>=1.8.0",
     "ruff>=0.1.0",
+]
+web = [
+    "textual-web>=0.1.0",
 ]
 
 [tool.poetry]
